syntax = "proto3";
import "common.proto";

// The tag as it is stored in the database
message Tag {
    string id = 1;
    string name = 2;
    repeated ApplicableTo applicable_to = 3;
    repeated string also_adds = 4;
    repeated string aliases = 5;
    DateTime added_on = 350;
};
